@@ -48,8 +48,6 @@
 - man page
 - sort out bell: passing through should be optional
 - commands:
-	refresh session (similar to detach: -a for all, else if key redraw cur,
-	    else do nothing)
 	rename sessions
 	swap windows
 	link/copy windows
