@@ -1,4 +1,4 @@
-/* $Id: key-bindings.c,v 1.8 2007-10-12 13:03:58 nicm Exp $ */
+/* $Id: key-bindings.c,v 1.9 2007-10-19 09:21:26 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -103,9 +103,10 @@ key_bindings_init(void)
 		{ '7', &cmd_select_window_entry, cmd_select_window_default },
 		{ '8', &cmd_select_window_entry, cmd_select_window_default },
 		{ '9', &cmd_select_window_entry, cmd_select_window_default },
+		{ 'R', &cmd_refresh_session_entry, NULL },
+		{ 'r', &cmd_refresh_session_entry, NULL },
 		{ META, &cmd_send_prefix_entry, NULL },
-/*		{ 'R', &cmd_refresh_client_entry },
-		{ 'r', &cmd_refresh_client_entry },
+/*
 		{ 'I', &cmd_windo_info_entry },
 		{ 'i', &cmd_window_info_entry },
 		{ META, &cmd_meta_entry_entry },
